--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 		<title>version controller</title>
 	</head>
 	<body>
-		<h2>Welocme to Version control</h2>
+		<center><h2>Welocme to Version control</h2>
 		<p>Testing with githhub</p>
+		<p>done some changes</p></center>
 	</body>
 </html>
